# color-cue-psychophysics

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
notebooks/: README.md  interactive-calibration-sessions.ipynb  noise-calibration-demo.ipynb  stimulus-definitions.ipynb  stimulus-definitions.tex
server/: README.md  app.py  auth.py  plots.py  render.py  task_runner.py
server/server_data/: users.json
server/server_data/session_data/baseline_staircase/admin/baseline 1/: metadata.json  results.csv  staircase_summary.csv
server/server_data/session_data/baseline_staircase/dk/1/: metadata.json  results.csv  staircase_summary.csv
server/server_data/session_data/calibrated_task/admin/1/: metadata.json  results.csv
server/server_data/session_data/calibrated_task/dk/2/: metadata.json  results.csv
server/templates/: admin.html  admin_data.html  admin_user.html  base.html  change_password.html  dashboard.html  error.html  login.html  register.html  register_public.html  task.html
src/color_cue/: __init__.py  interactive.py  psychophysics.py  sessions.py  staircase.py  stimulus.py
tests/: conftest.py  test_interactive.py  test_psychophysics.py  test_stimulus.py
